--- a/OnlineShopping/OnlineShopping.csproj
+++ b/OnlineShopping/OnlineShopping.csproj
@@ -462,6 +462,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="DatabaseScript\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
