--- a/OnlineShopping/OnlineShopping.csproj
+++ b/OnlineShopping/OnlineShopping.csproj
@@ -200,6 +200,117 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\ProductImage\Large\10_pi4.jpg" />
+    <Content Include="Content\ProductImage\Large\1_Penguins.jpg" />
+    <Content Include="Content\ProductImage\Large\2_Penguins.jpg" />
+    <Content Include="Content\ProductImage\Large\2_samsung-galaxy-on5-spotted-1.jpg" />
+    <Content Include="Content\ProductImage\Large\3_download %281%29.jpg" />
+    <Content Include="Content\ProductImage\Large\3_Jellyfish.jpg" />
+    <Content Include="Content\ProductImage\Large\4_download.jpg" />
+    <Content Include="Content\ProductImage\Large\4_Tulips.jpg" />
+    <Content Include="Content\ProductImage\Large\5_3_download %281%29.jpg" />
+    <Content Include="Content\ProductImage\Large\5_expert3.jpg" />
+    <Content Include="Content\ProductImage\Large\6_images.jpg" />
+    <Content Include="Content\ProductImage\Large\7_Htc-Desire-516-white--SDL232582179-1-71d4a.jpg" />
+    <Content Include="Content\ProductImage\Large\8_11.png" />
+    <Content Include="Content\ProductImage\Large\8_50.png" />
+    <Content Include="Content\ProductImage\Large\8_cofee3.jpg" />
+    <Content Include="Content\ProductImage\Large\8_mobiles-c59b1ba6cb951bf85cbb9c06f1cc31dc.png" />
+    <Content Include="Content\ProductImage\Large\9_pi4.jpg" />
+    <Content Include="Content\ProductImage\Large\Htc-Desire-516-white--SDL232582179-1-71d4a.jpg" />
+    <Content Include="Content\ProductImage\Large\images %281%29.jpg" />
+    <Content Include="Content\ProductImage\Large\images.jpg" />
+    <Content Include="Content\ProductImage\Large\mobile-dev4.png" />
+    <Content Include="Content\ProductImage\Large\ubuntu-mobile-os-1.jpg" />
+    <Content Include="Content\ProductImage\Medium\10_pi4.jpg" />
+    <Content Include="Content\ProductImage\Medium\1_Penguins.jpg" />
+    <Content Include="Content\ProductImage\Medium\2_Penguins.jpg" />
+    <Content Include="Content\ProductImage\Medium\2_samsung-galaxy-on5-spotted-1.jpg" />
+    <Content Include="Content\ProductImage\Medium\3_download %281%29.jpg" />
+    <Content Include="Content\ProductImage\Medium\3_Jellyfish.jpg" />
+    <Content Include="Content\ProductImage\Medium\4_download.jpg" />
+    <Content Include="Content\ProductImage\Medium\4_Tulips.jpg" />
+    <Content Include="Content\ProductImage\Medium\5_3_download %281%29.jpg" />
+    <Content Include="Content\ProductImage\Medium\5_expert3.jpg" />
+    <Content Include="Content\ProductImage\Medium\6_images.jpg" />
+    <Content Include="Content\ProductImage\Medium\7_Htc-Desire-516-white--SDL232582179-1-71d4a.jpg" />
+    <Content Include="Content\ProductImage\Medium\8_11.png" />
+    <Content Include="Content\ProductImage\Medium\8_50.png" />
+    <Content Include="Content\ProductImage\Medium\8_cofee3.jpg" />
+    <Content Include="Content\ProductImage\Medium\8_mobiles-c59b1ba6cb951bf85cbb9c06f1cc31dc.png" />
+    <Content Include="Content\ProductImage\Medium\9_pi4.jpg" />
+    <Content Include="Content\ProductImage\Small\10_pi4.jpg" />
+    <Content Include="Content\ProductImage\Small\1_Penguins.jpg" />
+    <Content Include="Content\ProductImage\Small\2_Penguins.jpg" />
+    <Content Include="Content\ProductImage\Small\2_samsung-galaxy-on5-spotted-1.jpg" />
+    <Content Include="Content\ProductImage\Small\3_download %281%29.jpg" />
+    <Content Include="Content\ProductImage\Small\3_Jellyfish.jpg" />
+    <Content Include="Content\ProductImage\Small\4_download.jpg" />
+    <Content Include="Content\ProductImage\Small\4_Tulips.jpg" />
+    <Content Include="Content\ProductImage\Small\5_3_download %281%29.jpg" />
+    <Content Include="Content\ProductImage\Small\5_expert3.jpg" />
+    <Content Include="Content\ProductImage\Small\6_images.jpg" />
+    <Content Include="Content\ProductImage\Small\7_Htc-Desire-516-white--SDL232582179-1-71d4a.jpg" />
+    <Content Include="Content\ProductImage\Small\8_11.png" />
+    <Content Include="Content\ProductImage\Small\8_50.png" />
+    <Content Include="Content\ProductImage\Small\8_cofee3.jpg" />
+    <Content Include="Content\ProductImage\Small\8_mobiles-c59b1ba6cb951bf85cbb9c06f1cc31dc.png" />
+    <Content Include="Content\ProductImage\Small\9_pi4.jpg" />
+    <Content Include="Content\Site.css" />
+    <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\themes\base\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\themes\base\jquery-ui.css" />
+    <Content Include="Content\themes\base\jquery.ui.accordion.css" />
+    <Content Include="Content\themes\base\jquery.ui.all.css" />
+    <Content Include="Content\themes\base\jquery.ui.autocomplete.css" />
+    <Content Include="Content\themes\base\jquery.ui.base.css" />
+    <Content Include="Content\themes\base\jquery.ui.button.css" />
+    <Content Include="Content\themes\base\jquery.ui.core.css" />
+    <Content Include="Content\themes\base\jquery.ui.datepicker.css" />
+    <Content Include="Content\themes\base\jquery.ui.dialog.css" />
+    <Content Include="Content\themes\base\jquery.ui.progressbar.css" />
+    <Content Include="Content\themes\base\jquery.ui.resizable.css" />
+    <Content Include="Content\themes\base\jquery.ui.selectable.css" />
+    <Content Include="Content\themes\base\jquery.ui.slider.css" />
+    <Content Include="Content\themes\base\jquery.ui.tabs.css" />
+    <Content Include="Content\themes\base\jquery.ui.theme.css" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\themes\base\minified\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\themes\base\minified\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\themes\base\minified\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\themes\base\minified\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\themes\base\minified\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\themes\base\minified\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\themes\base\minified\jquery-ui.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.accordion.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.autocomplete.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.button.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.core.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.datepicker.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.dialog.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.progressbar.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.resizable.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.selectable.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
+    <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="CSS\adminfonts\roboto-bold-webfont.svg" />
     <Content Include="CSS\adminfonts\roboto-medium-webfont.svg" />
     <Content Include="CSS\adminfonts\roboto-regular-webfont.svg" />
@@ -235,7 +346,6 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="Images\aboutusBG.jpg" />
     <Content Include="Images\AdminLoginbg.jpg" />
     <Content Include="Images\availIcon.png" />
@@ -462,6 +572,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\ProductImage\Original\" />
     <Folder Include="DatabaseScript\" />
   </ItemGroup>
   <ItemGroup>
